# data-processing-api

./: .gitignore  README.MD  main.py  pyproject.toml
processor/: __init__.py  aggregate.py  clean.py  load_data.py
tests/: test_processor.py
